<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/search"
        android:title="@string/search_title"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />
    <item android:id="@+id/settings" android:title="@string/settings" app:showAsAction="never" />
    <!-- <item android:id="@+id/offlineOnly" android:title="@string/display_local_images" app:showAsAction="never" /> -->
    <item android:id="@+id/login" android:title="@string/login" app:showAsAction="never" />
    <item android:id="@+id/logout" android:title="@string/logout" app:showAsAction="never" />
    <item android:id="@+id/switchOrg" android:title="@string/select_organization" app:showAsAction="never" android:visible="false"/>
    <item android:id="@+id/switchSite" android:title="@string/select_site" app:showAsAction="never" android:visible="false"/>
    <item android:id="@+id/about" android:title="@string/about" app:showAsAction="never" />
</menu>
