<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/login"
        android:title="@string/login"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/switchOrg"
        android:title="@string/select_organization"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/switchSite"
        android:title="@string/select_site"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/about"
        android:title="@string/about"
        app:showAsAction="never" />
</menu>