<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/photo_content_container"
android:layout_width="match_parent"
android:layout_height="match_parent"
app:layout_behavior="@string/appbar_scrolling_view_behavior"
tools:showIn="@layout/activity_image_setup"
android:orientation="vertical"
android:layout_margin="4dp"
android:theme="@style/AppTheme2" >
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_weight=".5">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layout_image_meta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginTop="10dp"
                    android:text="Tags"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layoutTagName"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginVertical="10dp"
                    android:hint="@string/tag"
                    app:expandedHintEnabled="false"
                    app:helperText="Type or scan a tag"
                    app:hintTextAppearance="@style/TextAppearance.Material3.LabelMedium"
                    app:hintTextColor="@color/md_theme_onSurface_highContrast"
                    app:placeholderText="Input">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtTagName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:paddingStart="20dp"
                        android:paddingTop="20dp"
                        android:paddingEnd="20dp"/>

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:minHeight="30dp">

                    <com.google.android.flexbox.FlexboxLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/tagCloud"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:flexWrap="wrap"/>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_image_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginTop="10dp"
                    android:text="Categories"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtCategoryLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="60dp"
                    android:hint="@string/category"
                    app:hintTextAppearance="@style/TextAppearance.Material3.LabelMedium"
                    app:hintTextColor="@color/md_theme_onSurface_highContrast"
                    app:expandedHintEnabled="false"
                    app:endIconTint="@color/sdg_blue_accent"
                    app:endIconDrawable="@drawable/ic_drop_down_arrow_black_24dp"
                    app:startIconDrawable="@drawable/ic_search_white_24dp">

                <AutoCompleteTextView
                    android:id="@+id/txtCategoryAutocomplete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:paddingStart="20dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="20dp"/>

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:minHeight="30dp">

                    <com.google.android.flexbox.FlexboxLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/categoryCloud"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:flexWrap="wrap"/>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginTop="10dp"
                    android:text="Comments"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/comment_outlined_text_input_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginVertical="10dp"
                    android:hint="@string/comment"
                    app:expandedHintEnabled="false"
                    app:hintTextAppearance="@style/TextAppearance.Material3.LabelMedium"
                    app:hintTextColor="@color/md_theme_onSurface_highContrast"
                    app:placeholderText="Input">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtAnnotation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:inputType="textMultiLine"
                        android:paddingStart="20dp"
                        android:paddingTop="20dp"
                        android:paddingEnd="20dp"/>

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="32dp"
                android:layout_marginVertical="10dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    app:srcCompat="@drawable/ic_people_outline_black_24dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minHeight="30dp">

                        <com.google.android.flexbox.FlexboxLayout xmlns:android="http://schemas.android.com/apk/res/android"
                            xmlns:app="http://schemas.android.com/apk/res-auto"
                            android:id="@+id/ownerCloud"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:flexWrap="wrap"/>

                    </LinearLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txtOwnerLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        app:hintTextAppearance="@style/TextAppearance.Material3.LabelMedium"
                        app:hintTextColor="@color/md_theme_onSurface_highContrast"
                        app:expandedHintEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txtOwner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:focusable="false"
                            android:hint="Add Owner"
                            android:inputType="text"/>

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/scanTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="60dp"
            android:visibility="visible"
            android:text="Scan"
            app:fabSize="normal"
            app:backgroundTint="@color/md_theme_primaryContainer_mediumContrast"
            app:srcCompat="@drawable/ic_barcode_black_24dp" />
    </FrameLayout>

</LinearLayout>